--- a/appendix.tex
+++ b/appendix.tex
@@ -1,6 +1,6 @@
 \begin{appendix}
 
-  \input{appendix_lammpsrant}
+  %% \input{appendix_lammpsrant}
   \input{appendix_multilayer}
   \input{appendix_silicon}
 
