--- a/settings.tex
+++ b/settings.tex
@@ -60,4 +60,5 @@
 \algnewcommand\Assumption{\item[\algorithmicassumption]}
 
 \DeclareSIUnit\gpcc{\gram\per\cubic\centi\meter}
+\DeclareSIUnit\week{w}
 \def\oddrowcolors{\rowcolors{0}{white}{lightgray}}
