--- a/bibliography.tex
+++ b/bibliography.tex
@@ -2,9 +2,33 @@
 %\manualmark
 %\markboth{Literaturverzeichnis}{Literaturverzeichnis}
 %\bibliographystyle{unsrt} % standart
-\bibliographystyle{ext/gerunsrtmod} % titel kursiv, journal normal; ist fein, modifiziert damit die Namen stimmen
+%\bibliographystyle{bibstyles/gerunsrtmod} % titel kursiv, journal normal; ist fein, modifiziert damit die Namen stimmen
 %\bibliographystyle{gerunsrtdoi} % titel kursiv, journal normal; ist fein, modifiziert damit die Namen stimmen + doi anzeigen (in progress ...)
 %\bibliographystyle{IEEEtrans} % Hinweis von Christian
+\bibliographystyle{bibstyles/bibteichert} % Fabian Teichert
 %\usepackage{url}
 
-\bibliography{literature} %standart
+\todo[inline]{Literaturverzeichnis muss noch überarbeitet werden}
+
+\newcommand{\bstaddress}{}
+\newcommand{\bstauthor}{\scshape}
+\newcommand{\bstdoi}{}
+\newcommand{\bstedition}{}
+\newcommand{\bstetal}{\scshape}
+\newcommand{\bstjournal}{}
+\newcommand{\bstnumpages}{}
+\newcommand{\bstpage}{}
+\newcommand{\bstpages}{}
+\newcommand{\bstpublisher}{}
+\newcommand{\bstschool}{}
+\newcommand{\bsttitle}{\itshape}
+\newcommand{\bstvolume}{}
+\newcommand{\bstyear}{}
+\newcommand{\bbland}{und}
+\newcommand{\bblarticle}{Artikel}
+\newcommand{\bbledition}{Ausg.}
+\newcommand{\bblfrom}{in}
+\newcommand{\bblpage}{S.}
+\newcommand{\bblpages}{S.}
+
+\bibliography{literature} %standard
