--- a/contents.tex
+++ b/contents.tex
@@ -102,6 +102,7 @@ $p_\text{partial}$ & Partialdruck                   \\
 $\tau$             & Dämpfungszeit des Thermostates \\
 $A_S^D$            & asd                            \\
 \end{tabularx}
+\todo[inline]{die wichtigsten Symbole automatisch aus allen Formeln exportieren}
 
 %\printglosstex(acr)
 
