--- a/copperpvd.tex
+++ b/copperpvd.tex
@@ -21,7 +21,7 @@ Aus diesem Grund ist eine einfache Voruntersuchung der verfügbaren Parametersä
     Cu\_u6.eam                  & Aktivierungsenergie für Eigendiffusionen                                     & \cite{adams_self-diffusion_1989}         \\
     Cu-Zr\_2.eam.fs             & Flüssige und amorphe \ce{Cu-Zr}-Legierungen                                  & \cite{mendelev_development_2009}         \\
     Cu-Zr.eam.fs                & Flüssige und amorphe \ce{Cu-Zr}-Legierungen                                  & \cite{mendelev_using_2007}               \\
-    Mendelev\_Cu2\_2012.eam.fs  & Unterkühlte \ce{Al-Cu}-Schmelzen. Basiert auf \cite{mendelev_analysis_2008}  & \cite{_interatomic_2014}                 \\
+    Mendelev\_Cu2\_2012.eam.fs  & Unterkühlte \ce{Al-Cu}-Schmelzen. Basiert auf \cite{mendelev_analysis_2008}  & \cite{becker_interatomic_2014}                 \\
     \hline
   \end{tabularx}
 
