--- a/kmc.tex
+++ b/kmc.tex
@@ -60,3 +60,5 @@ Um diese Beschränkungen zu umgehen, werden in Parsivald (Abschnitt~\ref{parsiva
 Anschließend bestimmt eine Molekulardynamik-Simulation den Ausgang der Oberflächenreaktion mit atomistischer Genauigkeit.
 Trotz Ergodizität der MD-Simulationen, durch welche verschiedenen Ergebnissen des Ereignisses eine Wahrscheinlichkeit entsprechend der relativen Reaktionsrate zugewiesen werden sollte, sorgt diese Formulierung zu einer Verletzung der KMC-Formulierung durch eine Verzerrung der Simulationszeit bei fehlerhaften Ereignisraten.
 Als Vorteil sorgt die Kombination beider Methoden zu einer Beschleunigung gegenüber MD-Rechnungen und zur Möglichkeit der strukturellen Betrachtung für KMC-Simulationen, wobei für gesteigerte Effizienz der Algorithmen auf spezialisierte Datenstrukturen zurück gegriffen werden muss.
+
+\todo[inline]{auf zwei Seiten begrenzen}
