--- a/literature.bib
+++ b/literature.bib
@@ -274,13 +274,6 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 	file = {0268-1242_27_7_074008.pdf:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/TABNV78M/0268-1242_27_7_074008.pdf:application/pdf}
 }
 
-@misc{baskes_modified_1996,
-	title = {Modified Embedded Atom Method Calculations of Interfaces},
-	author = {Baskes, M. I.},
-	year = {1996},
-	file = {1996_baskes_modified_embedded_atom.pdf:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/KG49BW6W/1996_baskes_modified_embedded_atom.pdf:application/pdf}
-}
-
 @article{daw_embedded-atom_1984,
 	title = {Embedded-atom method: Derivation and application to impurities, surfaces, and other defects in metals},
 	volume = {29},
@@ -602,6 +595,7 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 }
 
 @phdthesis{lorenz_entwicklung_2012,
+	type = {Bachelorarbeit},
 	title = {Entwicklung und Verifikation eines kombinierten Kinetic Monte Carlo / Molekulardynamik Modells zur Simulation von Schichtabscheidungen},
 	url = {http://nbn-resolving.de/urn:nbn:de:bsz:ch1-qucosa-106314},
 	urldate = {2014-07-24},
@@ -632,6 +626,7 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 	title = {Embedded-atom-method functions for the fcc metals Cu, Ag, Au, Ni, Pd, Pt, and their alloys},
 	volume = {33},
 	url = {http://www.google.de/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&ved=0CCMQFjAA&url=http%3A%2F%2Fgalilei.chem.psu.edu%2F~bjg%2FChem560_2003%2FPotentials%2FFoiles_1986.pdf&ei=z5MhVKaxIoKCzAP084HIDQ&usg=AFQjCNE2Gno4pjkeYnzZC1354OE0_0EEbA&bvm=bv.75775273,d.bGQ},
+	doi = {10.1103/PhysRevB.33.7983},
 	number = {12},
 	journal = {Physical Review B},
 	author = {Foiles, S.M. and Baskes, M.I. and Daw, M. S.},
@@ -796,9 +791,10 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 	file = {Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/2PHNVNQG/14786430802206482.html:text/html}
 }
 
-@misc{_interatomic_2014,
+@misc{becker_interatomic_2014,
 	title = {Interatomic Potentials Repository Project - Cu},
 	url = {http://www.ctcms.nist.gov/potentials/Cu.html},
+	author = {Becker, Chandler and Trautt, Zachary},
 	month = sep,
 	year = {2014}
 }
@@ -1081,4 +1077,91 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 	year = {1999},
 	pages = {221--231},
 	file = {ScienceDirect Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/AKA4GUJG/Shapiro and Tombrello - 1999 - Simulation of sputtering induced by high energy go.pdf:application/pdf;ScienceDirect Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/E6DMASGK/S0168583X9900141X.html:text/html}
+}
+
+@misc{accelrys_materials_2014,
+	title = {Materials Studio Web Page},
+	shorttitle = {Materials Studio},
+	url = {http://accelrys.com/products/materials-studio/index.html},
+	journal = {Use Accelrys Materials Studio for materials modeling \& simulation},
+	author = {Accelrys},
+	month = nov,
+	year = {2014}
+}
+
+@misc{case_amber_2014,
+	title = {{AMBER}},
+	url = {http://ambermd.org/},
+	author = {Case, David and Cheatham, Tom and Merz, Ken and Roitberg, Adrian and Simmerling, Carlos and Luo, Ray and Wang, Junmei and Walker, Ross},
+	month = nov,
+	year = {2014}
+}
+
+@misc{brooks_charmm_2014,
+	title = {{CHARMM}},
+	url = {http://www.charmm.org/},
+	author = {Brooks, B. R.},
+	month = nov,
+	year = {2014}
+}
+
+@misc{lindahl_gromacs_2014,
+	title = {Gromacs},
+	url = {http://www.gromacs.org/},
+	author = {Lindahl, Erik and van der Spoel, David and Hess, Berk},
+	month = nov,
+	year = {2014}
+}
+
+@article{brooks_charmm:_1983,
+	title = {{CHARMM}: A program for macromolecular energy, minimization, and dynamics calculations},
+	volume = {4},
+	copyright = {Copyright © 1983 John Wiley \& Sons, Inc.},
+	issn = {1096-987X},
+	shorttitle = {{CHARMM}},
+	url = {http://onlinelibrary.wiley.com/doi/10.1002/jcc.540040211/abstract},
+	doi = {10.1002/jcc.540040211},
+	abstract = {{CHARMM} (Chemistry at {HARvard} Macromolecular Mechanics) is a highly flexible computer program which uses empirical energy functions to model macromolecular systems. The program can read or model build structures, energy minimize them by first- or second-derivative techniques, perform a normal mode or molecular dynamics simulation, and analyze the structural, equilibrium, and dynamic properties determined in these calculations. The operations that {CHARMM} can perform are described, and some implementation details are given. A set of parameters for the empirical energy function and a sample run are included.},
+	number = {2},
+	urldate = {2014-11-05},
+	journal = {Journal of Computational Chemistry},
+	author = {Brooks, Bernard R. and Bruccoleri, Robert E. and Olafson, Barry D. and States, David J. and Swaminathan, S. and Karplus, Martin},
+	month = jun,
+	year = {1983},
+	pages = {187--217},
+	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/DF7SP8KF/Brooks et al. - 1983 - CHARMM A program for macromolecular energy, minim.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/IUSZ9W9G/abstract\;jsessionid=C5E899AEA92A1915F05E36771E1D78FD.html:text/html}
+}
+
+@incollection{mackerell_charmm:_2002,
+	title = {{CHARMM}: The Energy Function and Its Parameterization},
+	copyright = {Copyright © 2002 by John Wiley and Sons, Ltd. All rights reserved.},
+	isbn = {9780470845011},
+	shorttitle = {{CHARMM}},
+	url = {http://onlinelibrary.wiley.com/doi/10.1002/0470845015.cfa007/abstract},
+	urldate = {2014-11-05},
+	booktitle = {Encyclopedia of Computational Chemistry},
+	publisher = {John Wiley \& Sons, Ltd},
+	author = {MacKerell, Alexander D. and Brooks, Bernard and Brooks, Charles L. and Nilsson, Lennart and Roux, Benoit and Won, Youngdo and Karplus, Martin},
+	year = {2002},
+	file = {Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/MSVIJKPR/abstract.html:text/html}
+}
+
+@article{brooks_charmm:_2009,
+	title = {{CHARMM}: The biomolecular simulation program},
+	volume = {30},
+	copyright = {Copyright © 2009 Wiley Periodicals, Inc.},
+	issn = {1096-987X},
+	shorttitle = {{CHARMM}},
+	url = {http://onlinelibrary.wiley.com/doi/10.1002/jcc.21287/abstract},
+	doi = {10.1002/jcc.21287},
+	abstract = {{CHARMM} (Chemistry at {HARvard} Molecular Mechanics) is a highly versatile and widely used molecular simulation program. It has been developed over the last three decades with a primary focus on molecules of biological interest, including proteins, peptides, lipids, nucleic acids, carbohydrates, and small molecule ligands, as they occur in solution, crystals, and membrane environments. For the study of such systems, the program provides a large suite of computational tools that include numerous conformational and path sampling methods, free energy estimators, molecular minimization, dynamics, and analysis techniques, and model-building capabilities. The {CHARMM} program is applicable to problems involving a much broader class of many-particle systems. Calculations with {CHARMM} can be performed using a number of different energy functions and models, from mixed quantum mechanical-molecular mechanical force fields, to all-atom classical potential energy functions with explicit solvent and various boundary conditions, to implicit solvent and membrane models. The program has been ported to numerous platforms in both serial and parallel architectures. This article provides an overview of the program as it exists today with an emphasis on developments since the publication of the original {CHARMM} article in 1983. © 2009 Wiley Periodicals, Inc.J Comput Chem, 2009.},
+	number = {10},
+	urldate = {2014-11-05},
+	journal = {Journal of Computational Chemistry},
+	author = {Brooks, B. R. and Brooks, C. L. and Mackerell, A. D. and Nilsson, L. and Petrella, R. J. and Roux, B. and Won, Y. and Archontis, G. and Bartels, C. and Boresch, S. and Caflisch, A. and Caves, L. and Cui, Q. and Dinner, A. R. and Feig, M. and Fischer, S. and Gao, J. and Hodoscek, M. and Im, W. and Kuczera, K. and Lazaridis, T. and Ma, J. and Ovchinnikov, V. and Paci, E. and Pastor, R. W. and Post, C. B. and Pu, J. Z. and Schaefer, M. and Tidor, B. and Venable, R. M. and Woodcock, H. L. and Wu, X. and Yang, W. and York, D. M. and Karplus, M.},
+	month = jul,
+	year = {2009},
+	keywords = {biomolecular simulation, biophysical computation, {CHARMM} program, energy function, Molecular dynamics, molecular mechanics, molecular modeling},
+	pages = {1545--1614},
+	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/CENUH2EP/Brooks et al. - 2009 - CHARMM The biomolecular simulation program.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/XMM55X64/full.html:text/html}
 }
