--- a/depositions.tex
+++ b/depositions.tex
@@ -19,7 +19,7 @@ Alle Prozesse finden in speziellen Abscheidungskammern oder Reaktoren statt, üb
   }\hfill
   \parbox[c]{\subcaptionwidth}{
     \subcaption{Sputter-Kammer (PVD):
-      Ein Elektronenstrahl (links) schlägt Atome aus dem Target (oben), die sich auf dem Substrat (unten) als dünne Schicht absetzen
+      Ein Elektronen- oder Ionenstrahl (links) schlägt Atome aus dem Target (oben), die sich auf dem Substrat (unten) als dünne Schicht absetzen
     }
     \label{fig:depochamber-a}
   }
@@ -96,7 +96,7 @@ Alle Prozesse finden in speziellen Abscheidungskammern oder Reaktoren statt, üb
 
 \subsection{Physikalische Gasphasenabscheidung}
 
-Physikalische Gasphasenabscheidungen (PVD, Physical Vapor Deposition) sind eine grundlegenden Abscheidungsart, die nichtreaktiv mit einzelnen Atomen funktioniert.
+Physikalische Gasphasenabscheidungen (PVD, Physical Vapor Deposition) sind eine grundlegende Art von Abscheidungsprozessen, bei denen einzelne Atome nichtreaktiv auf einer Oberfläche adsorbieren.
 Zu ihnen zählt neben und Vakuum-Evaporation vor allem Sputtering, bei dem aus einem Block des gewünschten Materiales (Target) per Elektronen- oder Ionenstrahl kontinuierlich Atome herausgeschlagen werden, die sich dann auf dem Substrat absetzen und dort zu einer dünnen Schicht verbinden.
 Anhand der Energien der herausschlagenden Partikel und deren \todo{Größe des?}Teilchenstrom lässt sich dabei die Wachstumsrate und Qualität des abgeschiedenen Dünnfilmes beeinflussen.
 Durch den statistischen Charakter der Abscheidungsorte resultiert Sputtering in Abhängigkeit des abgeschiedenen Materiales und der Umgebungsbedingungen meist in glatten Filmen\cite{svorcik_annealing_2011}, bei denen prozessbedingt keine Kontrolle der Schichtdicke im Sub-Nanometer-Bereich möglich ist.
